--- a/src/view/evento-detalhe/evento-detalhe.css
+++ b/src/view/evento-detalhe/evento-detalhe.css
@@ -15,12 +15,26 @@
 .btn-editar i {
   position: fixed;
   bottom: 10px;
+  top: 90%;
   right: 10px;
   color: #f21667;
   transition: 0.3 ease-in;
 }
 
 .btn-editar i:hover {
+  color: #614ea6;
+}
+
+.btn-excluir i {
+  position: fixed;
+  top: 85%;
+  bottom: 10px;
+  right: 10px;
+  color: #f21667;
+  transition: 0.3 ease-in;
+}
+
+.btn-excluir i:hover {
   color: #614ea6;
 }
 
